# bazel-sample

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sh  tools.bzl
libs/mylib/: BUILD.bazel  hello.go
